--- a/Section-4/4.1+Webpages/4.1 Webpages/index.html
+++ b/Section-4/4.1+Webpages/4.1 Webpages/index.html
@@ -1,6 +1,6 @@
 <h1>Welcome to My Website!</h1>
 <!-- Add an image of yourself that links to the about page -->
-<a href="./public/about.html"><img src="./assets/images/cat.png" alt="About My Town"> </a>
+<a href="./public/about.html"><img src="./assets/images/cat.png" alt="About My Town" /> </a>
 
 <hr />
 <!-- Add a link to your contact me page here -->
